fixing image parralax on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,10 @@ nav {
     box-shadow: 0px 3px 0px rgba(83, 192, 125, 0.7);
 }
 
+.dropdown-item:hover {
+    background-color: rgba(83, 192, 125, 0.4);
+}
+
 .navbar-logo img {
     height: 4rem;
 }
@@ -354,7 +358,7 @@ nav {
     color: #f1fffa;
 }
 
-.quote-icon {
+.quote-icon-review {
     color: #53c07d;
     font-size: 3rem;
     margin: 0 1rem;
@@ -393,7 +397,7 @@ nav {
         align-self: center;
         margin-left: 2rem;
     }
-    .quote-icon {
+    .quote-icon-review {
         align-self: flex-start;
     }
     .quote-reverse {
@@ -433,7 +437,7 @@ nav {
     margin: 0 1rem;
 }
 
-/*############### Footer ###############*/
+/*############################## Footer ##############################*/
 
 .footer {
     background-color: #707070;
@@ -456,10 +460,10 @@ nav {
     list-style: none;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 .footer ul li {
-    border-bottom: 1px solid rgba(255, 255, 255, .3);
     line-height: 30px;
 }
 
@@ -473,16 +477,6 @@ nav {
     color: #f1fffa;
     margin: 15px 0 15px 0;
     text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: 500;
-    transition: all ease-in-out .6s;
-}
-
-.footer h5 {
-    color: #f1fffa;
-    margin: 15px 0 15px 0;
-    text-transform: uppercase;
-    text-align: center;
     letter-spacing: 2px;
     font-weight: 500;
     transition: all ease-in-out .6s;
@@ -591,9 +585,11 @@ hr {
     background-color: #53c07d;
 }
 
-/*############### about-us.html ###############*/
+/*############################## End Footer ##############################*/
 
-@media screen and (max-width: 992px) {
+/*############################## Start About-us.html ##############################*/
+
+@media screen and (min-width: 992px) {
     .aboutUsBg {
         background: linear-gradient(to bottom, rgba(83, 192, 125, 0.4), rgba(83, 192, 125, 0.4)), url('../images/googlemaps/googlemaps3.png') center/cover fixed no-repeat;
     }
@@ -616,19 +612,32 @@ hr {
 }
 
 .about-us-html h4 {
-    text-decoration: underline;
-    -webkit-text-decoration-color: #53c07d;
-    /* Safari */
-    text-decoration-color: #53c07d;
     font-weight: 300;
     color: #f1fffa;
 }
 
-.quote-img {
-    height: 9rem;
+.quote-icon-div {
+    background-color: rgba(112, 112, 112, .9);
+}
+
+.quote-icon-div h4 {
+    color: #fff;
+}
+
+.quote-icon {
+    font-size: 10rem;
     animation: shake 5s;
     animation-iteration-count: infinite;
     cursor: pointer;
+    color: #53c07d;
+    margin: 0 1rem;
+}
+
+@media screen and (max-width: 992px) {
+    .quote-icon {
+        font-size: 6rem;
+        margin-top: -50px;
+    }
 }
 
 @keyframes shake {
@@ -783,6 +792,12 @@ hr {
     color: #f1fffa;
 }
 
+@media screen and (max-width: 992px) {
+    .about-us-html p {
+        font-size: .7rem;
+    }
+}
+
 .filler ul {
     list-style: none;
     font-size: 1.2rem;
@@ -794,11 +809,25 @@ hr {
     font-weight: 300;
 }
 
+@media screen and (max-width: 992px) {
+    .filler h5 {
+        font-size: 1rem;
+    }
+    .filler p {
+        font-size: 1rem;
+    }
+    .filler ul {
+        font-size: 1rem;
+    }
+}
+
 .map {
     background: linear-gradient(to bottom, rgba(83, 192, 125, 0.4), rgba(83, 192, 125, 0.4)), center/cover fixed no-repeat;
 }
 
-/*############### products ###############*/
+/*############################## End About-us.html ##############################*/
+
+/*############################## Start Products ##############################*/
 
 .product-container {
     width: 100%;
@@ -840,11 +869,20 @@ hr {
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
 }
 
+/*############################## End Products ##############################*/
+
 /*############### air-source.html ###############*/
 
 .airsource-parallax {
     min-height: 40vh;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/air-source/air-source4.jpg') center/cover fixed no-repeat;
+}
+
+@media screen and (max-width: 992px) {
+    .airsource-parallax {
+        min-height: 40vh;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/air-source/air-source4.jpg') center/cover no-repeat;
+    }
 }
 
 .pop-up {
